syntax = "proto3";

package configureprovider;

message SetPolicyRequest {
    bytes policyname = 1;
    bytes references = 2;
}
message SetPolicyResponse {
    bytes status = 1;
}

message SetRawPolicyRequest {
    bytes policyname = 1;
    bytes policycontent = 2;
}
message SetRawPolicyResponse {
    bytes status = 1;
}

message ExportPolicyRequest {
    bytes policyname = 1;
}
message ExportPolicyResponse {
    bytes status = 1;
    bytes policycontent = 2;
}

service ConfigureProviderService {
    rpc SetPolicy(SetPolicyRequest) returns (SetPolicyResponse) {};
    rpc setRawPolicy(SetRawPolicyRequest) returns (SetRawPolicyResponse) {};
    rpc exportPolicy(ExportPolicyRequest) returns (ExportPolicyResponse) {};
}